[package]
name = "octopus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }

serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }
thiserror = "1.0.40"
url = "2.3.1"

octopus-common = { version = "*", path = "../octopus-common" }
