[package]
name = "octopus-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
warp = { workspace = true }
tokio = { workspace = true }

pretty_env_logger = "0.5.0"

octopus-common = { version = "*", path = "../octopus-common" }
